--- a/render/configure.ac
+++ b/render/configure.ac
@@ -43,6 +43,8 @@ XORG_DEFAULT_OPTIONS
 PKG_CHECK_MODULES(X11, [x11])
 PKG_CHECK_MODULES(GL, [gl])
 PKG_CHECK_MODULES(GLU, [glu])
+PKG_CHECK_MODULES(GLFW3, [glfw3])
+PKG_CHECK_MODULES(GLEW, [glew])
 
 dnl compile with debug symbols
 AC_ARG_ENABLE(debug,
