--- a/render/configure.ac
+++ b/render/configure.ac
@@ -30,6 +30,8 @@ AC_CONFIG_SRCDIR([Makefile.am])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
+AC_PROG_CXX
+
 AM_INIT_AUTOMAKE([1.11 parallel-tests foreign no-dist-gzip dist-xz color-tests subdir-objects])
 
 m4_ifndef([XORG_MACROS_VERSION],
