--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -1,5 +1,6 @@
 bin_PROGRAMS =
 AM_CFLAGS = $(GCC_CFLAGS)
+AM_CXXFLAGS = $(GXX_CFLAGS)
 LDADD = @X11_LIBS@ @GLU_LIBS@ @GLFW3_LIBS@ @GLEW_LIBS@ -lm
 
 bin_PROGRAMS += basic-win
@@ -58,3 +59,7 @@ glfw_CFLAGS = $(AM_CFLAGS)
 bin_PROGRAMS += glfw_draw_tri
 glfw_draw_tri_SOURCES = glfw_draw_tri.c
 glfw_draw_tri_CFLAGS = $(AM_CFLAGS)
+
+bin_PROGRAMS += translation_test
+translation_test_SOURCES = translation_test.cpp
+translation_test_CXXFLAGS = $(AM_CXXFLAGS)
