add rotate and scale demo
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -91,3 +91,11 @@ glfw_texture2d_rect_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += glfw_texture2d_cube
 glfw_texture2d_cube_SOURCES = glfw_texture2d_cube.cpp
 glfw_texture2d_cube_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += scale_test
+scale_test_SOURCES = scale_test.cpp
+scale_test_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += rotate_test
+rotate_test_SOURCES = rotate_test.cpp
+rotate_test_CXXFLAGS = $(AM_CXXFLAGS)
