port opengl demo (25% done)
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/gles/Makefile.am
+++ b/render/gles/Makefile.am
@@ -14,3 +14,15 @@ egl_templater_CFLAGS = $(AM_CFLAGS)
 bin_PROGRAMS += es3_draw_tri
 es3_draw_tri_SOURCES = es3_draw_tri.c
 es3_draw_tri_CFLAGS = $(AM_CFLAGS)
+
+bin_PROGRAMS += es3_draw_rect
+es3_draw_rect_SOURCES = es3_draw_rect.c
+es3_draw_rect_CFLAGS = $(AM_CFLAGS)
+
+bin_PROGRAMS += es3_cull
+es3_cull_SOURCES = es3_cull.c
+es3_cull_CFLAGS = $(AM_CFLAGS)
+
+bin_PROGRAMS += es3_dual_vao
+es3_dual_vao_SOURCES = es3_dual_vao.cpp
+es3_dual_vao_CXXFLAGS = $(AM_CXXFLAGS)
