port opengl done
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/gles/Makefile.am
+++ b/render/gles/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS =
 AM_CFLAGS = $(GCC_CFLAGS)
 AM_CXXFLAGS = $(GXX_CFLAGS)
-LDADD = @X11_LIBS@ @GLES_LIBS@ @EGL_LIBS@
+LDADD = @X11_LIBS@ @GLES_LIBS@ @EGL_LIBS@ -lSOIL
 
 bin_PROGRAMS += egl_clear
 egl_clear_SOURCES = egl_clear.c
@@ -19,6 +19,14 @@ bin_PROGRAMS += es3_draw_rect
 es3_draw_rect_SOURCES = es3_draw_rect.c
 es3_draw_rect_CFLAGS = $(AM_CFLAGS)
 
+bin_PROGRAMS += es3_indexdraw_rect
+es3_indexdraw_rect_SOURCES = es3_indexdraw_rect.c
+es3_indexdraw_rect_CFLAGS = $(AM_CFLAGS)
+
+bin_PROGRAMS += es3_indexdraw_rect_strip
+es3_indexdraw_rect_strip_SOURCES = es3_indexdraw_rect_strip.c
+es3_indexdraw_rect_strip_CFLAGS = $(AM_CFLAGS)
+
 bin_PROGRAMS += es3_cull
 es3_cull_SOURCES = es3_cull.c
 es3_cull_CFLAGS = $(AM_CFLAGS)
@@ -26,3 +34,11 @@ es3_cull_CFLAGS = $(AM_CFLAGS)
 bin_PROGRAMS += es3_dual_vao
 es3_dual_vao_SOURCES = es3_dual_vao.cpp
 es3_dual_vao_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += es3_texture2d_rect
+es3_texture2d_rect_SOURCES = es3_texture2d_rect.cpp
+es3_texture2d_rect_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += es3_texture2d_cube
+es3_texture2d_cube_SOURCES = es3_texture2d_cube.cpp
+es3_texture2d_cube_CXXFLAGS = $(AM_CXXFLAGS)
