add scissor test for es and gl
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/gles/Makefile.am
+++ b/render/gles/Makefile.am
@@ -54,3 +54,7 @@ es3_instance_0_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += es3_instance_1
 es3_instance_1_SOURCES = es3_instance_1.cpp
 es3_instance_1_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += es3_scissor
+es3_scissor_SOURCES = es3_scissor.cpp
+es3_scissor_CXXFLAGS = $(AM_CXXFLAGS)
