--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -130,3 +130,7 @@ glfw_blend_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += glfw_fb_renderbuffer
 glfw_fb_renderbuffer_SOURCES = glfw_fb_renderbuffer.cpp
 glfw_fb_renderbuffer_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += glfw_fb_rendertex
+glfw_fb_rendertex_SOURCES = glfw_fb_rendertex.cpp
+glfw_fb_rendertex_CXXFLAGS = $(AM_CXXFLAGS)
