remove glut library check
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/configure.ac
+++ b/render/configure.ac
@@ -44,7 +44,7 @@ XORG_DEFAULT_OPTIONS
 
 PKG_CHECK_MODULES(X11, [x11])
 PKG_CHECK_MODULES(GL, [gl])
-PKG_CHECK_MODULES(GLU, [glu])
+# PKG_CHECK_MODULES(GLU, [glu])
 PKG_CHECK_MODULES(GLFW3, [glfw3])
 PKG_CHECK_MODULES(GLEW, [glew])
 PKG_CHECK_MODULES(EGL, [egl])
