add pbuffer offscreen render demo
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/gles/Makefile.am
+++ b/render/gles/Makefile.am
@@ -62,3 +62,7 @@ es3_scissor_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += es3_blend
 es3_blend_SOURCES = es3_blend.cpp
 es3_blend_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += pbuffer
+pbuffer_SOURCES = pbuffer.c
+pbuffer_CFLAGS = $(AM_CFLAGS)
