refine current demos and remove duplication
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -1,83 +1,12 @@
 bin_PROGRAMS =
+
 AM_CFLAGS = $(GCC_CFLAGS)
 AM_CXXFLAGS = $(GXX_CFLAGS)
 LDADD = @X11_LIBS@ @GLFW3_LIBS@ @GLEW_LIBS@ -lm -lSOIL
 
-bin_PROGRAMS += basic-win
-basic_win_SOURCES = basic-win.c
-basic_win_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += simple-ogl
-simple_ogl_SOURCES = simple-ogl.c
-simple_ogl_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += simple-connect
-simple_connect_SOURCES = simple-connect.c
-simple_connect_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += draw-line
-draw_line_SOURCES = draw-line.c
-draw_line_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += draw-color
-draw_color_SOURCES = draw-color.c
-draw_color_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += draw-font
-draw_font_SOURCES = draw-font.c
-draw_font_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += glfw_demo
-glfw_demo_SOURCES = glfw_demo.c
-glfw_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += glfw_draw_tri
-glfw_draw_tri_SOURCES = glfw_draw_tri.c
-glfw_draw_tri_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += translation_test
-translation_test_SOURCES = translation_test.cpp
-translation_test_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_draw_rect
-glfw_draw_rect_SOURCES = glfw_draw_rect.c
-glfw_draw_rect_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += glfw_indexdraw_rect
-glfw_indexdraw_rect_SOURCES = glfw_indexdraw_rect.c
-glfw_indexdraw_rect_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += glfw_indexdraw_rect_strip
-glfw_indexdraw_rect_strip_SOURCES = glfw_indexdraw_rect_strip.c
-glfw_indexdraw_rect_strip_CFLAGS = $(AM_CFLAGS)
-
-bin_PROGRAMS += mvp_test
-mvp_test_SOURCES = mvp_test.cpp
-mvp_test_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_indexdraw_cube
-glfw_indexdraw_cube_SOURCES = glfw_indexdraw_cube.cpp
-glfw_indexdraw_cube_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_texture2d_rect
-glfw_texture2d_rect_SOURCES = glfw_texture2d_rect.cpp
-glfw_texture2d_rect_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_texture2d_cube
-glfw_texture2d_cube_SOURCES = glfw_texture2d_cube.cpp
-glfw_texture2d_cube_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += scale_test
-scale_test_SOURCES = scale_test.cpp
-scale_test_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += rotate_test
-rotate_test_SOURCES = rotate_test.cpp
-rotate_test_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_cull
-glfw_cull_SOURCES = glfw_cull.c
-glfw_cull_CFLAGS = $(AM_CFLAGS)
+bin_PROGRAMS += texture2d
+texture2d_SOURCES = texture2d.cpp
+texture2d_CXXFLAGS = $(AM_CXXFLAGS)
 
 bin_PROGRAMS += glfw_gs_point2line
 glfw_gs_point2line_SOURCES = glfw_gs_point2line.c
@@ -91,53 +20,25 @@ bin_PROGRAMS += glfw_vs_feedback_point
 glfw_vs_feedback_point_SOURCES = glfw_vs_feedback_point.cpp
 glfw_vs_feedback_point_CXXFLAGS = $(AM_CXXFLAGS)
 
-bin_PROGRAMS += animation_cube_orbit
-animation_cube_orbit_SOURCES = animation_cube_orbit.cpp
-animation_cube_orbit_CXXFLAGS = $(AM_CXXFLAGS)
+bin_PROGRAMS += dual_vao
+dual_vao_SOURCES = dual_vao.cpp
+dual_vao_CXXFLAGS = $(AM_CXXFLAGS)
 
-bin_PROGRAMS += animation_orbit_light
-animation_orbit_light_SOURCES = animation_orbit_light.cpp
-animation_orbit_light_CXXFLAGS = $(AM_CXXFLAGS)
+bin_PROGRAMS += phong_model
+phong_model_SOURCES = phong_model.cpp
+phong_model_CXXFLAGS = $(AM_CXXFLAGS)
 
-bin_PROGRAMS += glfw_dual_vao
-glfw_dual_vao_SOURCES = glfw_dual_vao.cpp
-glfw_dual_vao_CXXFLAGS = $(AM_CXXFLAGS)
+bin_PROGRAMS += uniform
+uniform_SOURCES = uniform.cpp
+uniform_CXXFLAGS = $(AM_CXXFLAGS)
 
-bin_PROGRAMS += glfw_phong_model
-glfw_phong_model_SOURCES = glfw_phong_model.cpp
-glfw_phong_model_CXXFLAGS = $(AM_CXXFLAGS)
+bin_PROGRAMS += renderbuffer
+renderbuffer_SOURCES = renderbuffer.cpp
+renderbuffer_CXXFLAGS = $(AM_CXXFLAGS)
 
-bin_PROGRAMS += glfw_ubo
-glfw_ubo_SOURCES = glfw_ubo.cpp
-glfw_ubo_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_draw_inst_0
-glfw_draw_inst_0_SOURCES = glfw_draw_inst_0.cpp
-glfw_draw_inst_0_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_draw_inst_1
-glfw_draw_inst_1_SOURCES = glfw_draw_inst_1.cpp
-glfw_draw_inst_1_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_scissor
-glfw_scissor_SOURCES = glfw_scissor.cpp
-glfw_scissor_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_blend
-glfw_blend_SOURCES = glfw_blend.cpp
-glfw_blend_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_fb_renderbuffer
-glfw_fb_renderbuffer_SOURCES = glfw_fb_renderbuffer.cpp
-glfw_fb_renderbuffer_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_fb_rendertex
-glfw_fb_rendertex_SOURCES = glfw_fb_rendertex.cpp
-glfw_fb_rendertex_CXXFLAGS = $(AM_CXXFLAGS)
-
-bin_PROGRAMS += glfw_fb_mrt
-glfw_fb_mrt_SOURCES = glfw_fb_mrt.cpp
-glfw_fb_mrt_CXXFLAGS = $(AM_CXXFLAGS)
+bin_PROGRAMS += mrt
+mrt_SOURCES = mrt.cpp
+mrt_CXXFLAGS = $(AM_CXXFLAGS)
 
 bin_PROGRAMS += query
 query_SOURCES = query.cpp
@@ -150,3 +51,7 @@ rendertexture_CFLAGS = $(AM_CFLAGS)
 bin_PROGRAMS += attrib
 attrib_SOURCES = attrib.c
 attrib_CFLAGS = $(AM_CFLAGS)
+
+bin_PROGRAMS += instance
+instance_SOURCES = instance.cpp
+instance_CXXFLAGS = $(AM_CXXFLAGS)
