add noperspective demo
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -55,3 +55,7 @@ attrib_CFLAGS = $(AM_CFLAGS)
 bin_PROGRAMS += instance
 instance_SOURCES = instance.cpp
 instance_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += perspective_correct
+perspective_correct_SOURCES = perspective_correct.cpp
+perspective_correct_CXXFLAGS = $(AM_CXXFLAGS)
