add shared egl context demo
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/gles/Makefile.am
+++ b/render/gles/Makefile.am
@@ -74,3 +74,7 @@ rendertexture_CFLAGS = $(AM_CFLAGS)
 bin_PROGRAMS += pbuffer_rendertexture
 pbuffer_rendertexture_SOURCES = pbuffer_rendertexture.c
 pbuffer_rendertexture_CFLAGS = $(AM_CFLAGS)
+
+bin_PROGRAMS += shared_context
+shared_context_SOURCES = shared_context.c
+shared_context_CFLAGS = $(AM_CFLAGS)
