add indirect draw demo
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -75,3 +75,7 @@ fragcord_CFLAGS = $(AM_CFLAGS)
 bin_PROGRAMS += stencil
 stencil_SOURCES = stencil.c
 stencil_CFLAGS = $(AM_CFLAGS)
+
+bin_PROGRAMS += indirect
+indirect_SOURCES = indirect.c
+indirect_CFLAGS = $(AM_CFLAGS)
