add spot light demo
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -91,3 +91,7 @@ environment_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += point_light
 point_light_SOURCES = point_light.cpp
 point_light_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += spot_light
+spot_light_SOURCES = spot_light.cpp
+spot_light_CXXFLAGS = $(AM_CXXFLAGS)
