introduce new framework
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -8,13 +8,13 @@ bin_PROGRAMS += texture2d
 texture2d_SOURCES = texture2d.cpp
 texture2d_CXXFLAGS = $(AM_CXXFLAGS)
 
-bin_PROGRAMS += glfw_gs_point2line
-glfw_gs_point2line_SOURCES = glfw_gs_point2line.c
-glfw_gs_point2line_CFLAGS = $(AM_CFLAGS)
+bin_PROGRAMS += geometry_point
+geometry_point_SOURCES = geometry_point.cpp
+geometry_point_CXXFLAGS = $(AM_CXXFLAGS)
 
-bin_PROGRAMS += glfw_gs_point2triangle
-glfw_gs_point2triangle_SOURCES = glfw_gs_point2triangle.c
-glfw_gs_point2triangle_CFLAGS = $(AM_CFLAGS)
+bin_PROGRAMS += geometry_triangle
+geometry_triangle_SOURCES = geometry_triangle.cpp
+geometry_triangle_CXXFLAGS = $(AM_CXXFLAGS)
 
 bin_PROGRAMS += dual_vao
 dual_vao_SOURCES = dual_vao.cpp
@@ -45,8 +45,8 @@ rendertexture_SOURCES = rendertexture.c
 rendertexture_CFLAGS = $(AM_CFLAGS)
 
 bin_PROGRAMS += attrib
-attrib_SOURCES = attrib.c
-attrib_CFLAGS = $(AM_CFLAGS)
+attrib_SOURCES = attrib.cpp
+attrib_CXXFLAGS = $(AM_CXXFLAGS)
 
 bin_PROGRAMS += instance
 instance_SOURCES = instance.cpp
@@ -61,8 +61,8 @@ draw_xfb_SOURCES = draw_xfb.c
 draw_xfb_CFLAGS = $(AM_CFLAGS)
 
 bin_PROGRAMS += separate_shader_obj
-separate_shader_obj_SOURCES = separate_shader_obj.c
-separate_shader_obj_CFLAGS = $(AM_CFLAGS)
+separate_shader_obj_SOURCES = separate_shader_obj.cpp
+separate_shader_obj_CXXFLAGS = $(AM_CXXFLAGS)
 
 bin_PROGRAMS += fragcord
 fragcord_SOURCES = fragcord.c
@@ -73,8 +73,8 @@ stencil_SOURCES = stencil.c
 stencil_CFLAGS = $(AM_CFLAGS)
 
 bin_PROGRAMS += indirect
-indirect_SOURCES = indirect.c
-indirect_CFLAGS = $(AM_CFLAGS)
+indirect_SOURCES = indirect.cpp
+indirect_CXXFLAGS = $(AM_CXXFLAGS)
 
 bin_PROGRAMS += skybox
 skybox_SOURCES = skybox.cpp
