[raytracer] shadow ray cast
generate shadow ray by connection between hit point and light location.

Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/raytracer/src/Makefile.am
+++ b/raytracer/src/Makefile.am
@@ -7,3 +7,7 @@ LDADD = -lm
 bin_PROGRAMS += bare
 bare_SOURCES = bare.cpp
 bare_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += bare_shadow
+bare_shadow_SOURCES = bare_shadow.cpp
+bare_shadow_CXXFLAGS = $(AM_CXXFLAGS)
