[raytracer] modified shadow ray generation
generate shadow ray by reflection on the normal of hit point, and detect
the intersection between this shadow ray and other objects. by this
method, some fake shadow will be painted due to the ignorance of light
location.

Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/raytracer/src/Makefile.am
+++ b/raytracer/src/Makefile.am
@@ -11,3 +11,7 @@ bare_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += bare_shadow
 bare_shadow_SOURCES = bare_shadow.cpp
 bare_shadow_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += bare_shadow2
+bare_shadow2_SOURCES = bare_shadow2.cpp
+bare_shadow2_CXXFLAGS = $(AM_CXXFLAGS)
