--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -111,3 +111,7 @@ funky_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += fragc
 fragc_SOURCES = fragc.cpp
 fragc_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += compute_image_load_store
+compute_image_load_store_SOURCES = compute_image_load_store.cpp
+compute_image_load_store_CXXFLAGS = $(AM_CXXFLAGS)
