add ssbo interpreted as 1D/2D/3D write access demo
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -115,3 +115,7 @@ fragc_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += compute_image_load_store
 compute_image_load_store_SOURCES = compute_image_load_store.cpp
 compute_image_load_store_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += ssbo
+ssbo_SOURCES = ssbo.cpp
+ssbo_CXXFLAGS = $(AM_CXXFLAGS)
