--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -131,3 +131,7 @@ cs_rwbarrier_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += compute_large_image
 compute_large_image_SOURCES = compute_large_image.cpp
 compute_large_image_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += named_uniform_block
+named_uniform_block_SOURCES = named_uniform_block.cpp
+named_uniform_block_CXXFLAGS = $(AM_CXXFLAGS)
