--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -147,3 +147,7 @@ atomic_count_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += mipmap
 mipmap_SOURCES = mipmap.cpp
 mipmap_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += mipmap_drawcall_preamble
+mipmap_drawcall_preamble_SOURCES = mipmap_drawcall_preamble.cpp
+mipmap_drawcall_preamble_CXXFLAGS = $(AM_CXXFLAGS)
