mipmap generation midamble
opt for pot texture compared to preamble, bypass weight cals
we use texelFetch for quickness.

Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -151,3 +151,7 @@ mipmap_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += mipmap_drawcall_preamble
 mipmap_drawcall_preamble_SOURCES = mipmap_drawcall_preamble.cpp
 mipmap_drawcall_preamble_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += mipmap_drawcall_midamble
+mipmap_drawcall_midamble_SOURCES = mipmap_drawcall_midamble.cpp
+mipmap_drawcall_midamble_CXXFLAGS = $(AM_CXXFLAGS)
