--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -159,3 +159,7 @@ mipmap_drawcall_midamble_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += mipmap_drawcall_preamble_opt
 mipmap_drawcall_preamble_opt_SOURCES = mipmap_drawcall_preamble_opt.cpp
 mipmap_drawcall_preamble_opt_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += mipmap_drawcall_midamble_opt
+mipmap_drawcall_midamble_opt_SOURCES = mipmap_drawcall_midamble_opt.cpp
+mipmap_drawcall_midamble_opt_CXXFLAGS = $(AM_CXXFLAGS)
