compute shader way mipmap generation
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -179,3 +179,7 @@ mipmapchain_drawcall_midamble_r32f_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += mipmapchain_drawcall_preamble_r32f
 mipmapchain_drawcall_preamble_r32f_SOURCES = mipmapchain_drawcall_preamble_r32f.cpp
 mipmapchain_drawcall_preamble_r32f_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += mipmap_compute_preamble_r32f
+mipmap_compute_preamble_r32f_SOURCES = mipmap_compute_preamble_r32f.cpp
+mipmap_compute_preamble_r32f_CXXFLAGS = $(AM_CXXFLAGS)
