--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -187,3 +187,7 @@ mipmap_compute_preamble_r32f_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += mipmapchain_compute_preamble_r32f
 mipmapchain_compute_preamble_r32f_SOURCES = mipmapchain_compute_preamble_r32f.cpp
 mipmapchain_compute_preamble_r32f_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += mipmapchain_compute_preamble_gather_r32f
+mipmapchain_compute_preamble_gather_r32f_SOURCES = mipmapchain_compute_preamble_gather_r32f.cpp
+mipmapchain_compute_preamble_gather_r32f_CXXFLAGS = $(AM_CXXFLAGS)
