--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -195,3 +195,7 @@ mipmapchain_compute_preamble_gather_r32f_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += mipmapchain_drawcall_midamble_gather_r32f
 mipmapchain_drawcall_midamble_gather_r32f_SOURCES = mipmapchain_drawcall_midamble_gather_r32f.cpp
 mipmapchain_drawcall_midamble_gather_r32f_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += mipmapchain_drawcall_preamble_gather_r32f
+mipmapchain_drawcall_preamble_gather_r32f_SOURCES = mipmapchain_drawcall_preamble_gather_r32f.cpp
+mipmapchain_drawcall_preamble_gather_r32f_CXXFLAGS = $(AM_CXXFLAGS)
